# gazebo_line_sensor_plugin

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: main.launch
models/line_sensor/: model.config  model.sdf
models/line_sensor/meshes/: sensor.stl
plugins/src/: line_sensor_plugin.cpp
urdf/: line_sensor.gazebo  line_sensor.urdf  line_sensor.xacro
worlds/: test.world
