<?xml version="1.0"?>
<package format="2">
  <name>line_sensor_plugin</name>
  <version>0.1.0</version>
  <description>The line sensor package</description>

  <maintainer email="lucas.haug@thunderatz.org">Lucas Haug</maintainer>
  <maintainer email="felipe.bagni@thunderatz.org">Felipe Bagni</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>

